# django-manus

./: claude_system_prompt.md  claude_tools_available.json  event-tracing.json  gsc_setup_guide.md  llm-tracing.json  manage.py  pyproject.toml  pytest.ini  requirements.txt  run_flow.py  run_keyword_analysis.py  setup.py
.trae/rules/: project_rules.md
app/: admin.py  api.py  apps.py  config.py  llm.py  logger.py  models.py  tasks.py  urls.py  views.py
app/agent/: base.py  data_analysis.py  manus.py  mcp.py  toolcall.py
app/consumers/: agent_consumers.py  notifications.py
app/migrations/: 0001_initial.py  0002_conversation_daytona_volume_id_and_more.py  0002_fileartifact.py  0003_conversation_agent_type_conversation_llm_overrides.py
app/prompt/: extract_content.py  manus.py
app/sandbox/: __init__.py  client.py
app/tool/: __init__.py  ask_human.py  base.py  bash.py  file_operators.py  python_execute.py  str_replace_editor.py  tool_collection.py  web_search.py
app/tool/chart_visualization/: data_visualization.py  python_execute.py
app/tool/search/: __init__.py  google_search.py  yahoo_search.py
common/: apps.py  auth.py  channels_auth.py  models.py
common/migrations/: 0001_initial.py
config/: api.py  asgi.py  celery.py  env.py  storage_backends.py  urls.py  wsgi.py
config/django/: base.py  celery_app.py  production.py
config/settings/: cache.py  celery.py  drf.py  email.py  logging.py  s3.py
consumers/: default_consumers.py  router.py
docs/: chat-e2e-architecture.md  manus_frontend_integration_plan.md  message_memory_guide.md  nextjs_rest_ws_helpers.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/examples/: ARTIFACT_SPLIT_VIEW_GUIDE.md
frontend/examples/lite-artifact/: AgentSocketBridge.tsx  ArtifactPanel.tsx  ArtifactProvider.tsx  use-open-artifact-from-payload.ts  useAgentSocket.ts
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/chat/[conversation_id]/: page.tsx
frontend/src/components/: Fragment.tsx
frontend/src/components/ai-elements/: thinking-animation.tsx
frontend/src/contexts/: FragmentContext.tsx
templates/: base.html  chat.html  chat_detail.html
tests/: conftest.py  math_sample.py  test_daytona_volume.py
tests/agent/: test_ephemeral_messages.py  test_manus_llm_overrides.py
tests/api/: test_chat_endpoints.py  test_clerk_e2e.py
tests/sandbox/: test_daytona_client.py  test_sandbox_execution.py
tests/tool/: test_str_replace_editor_flow.py  test_web_search.py
users/: admin.py  apps.py  decorators.py  forms.py  managers.py  models.py  urls.py  views.py
users/management/commands/: create_superuser.py
users/migrations/: 0001_initial.py  0002_auto_20250623_0406.py
