[project]
name = "openmanus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "daytona>=0.27.1",
    "django~=4.2.0",
    "django-ninja>=1.4.3",
    "pydantic>=2.10.6,<2.12.0",
    "openai>=1.66.3,<1.109.0",
    "tenacity~=9.0.0",
    "tiktoken>=0.9,<0.12",
    "requests~=2.32.3",
    "beautifulsoup4~=4.13.3",
    "duckduckgo-search~=7.5.3",
    "asgiref>=3.7.0",
    "channels[daphne]>=4.0.0",
    "channels-redis~=4.1.0",
    "websockets>=11.0.0",
    "baidusearch~=1.0.3",
    "django-celery-beat~=2.6.0",
    "psycopg2-binary>=2.9.10",
    "django-storages>=1.14.6",
    "pyyaml~=6.0.2",
    "loguru~=0.7.3",
    "html2text~=2024.2.26",
    "pillow~=11.1.0",
    "uvicorn~=0.34.0",
    "unidiff~=0.7.5",
    "aiofiles~=24.1.0",
    "pydantic-core>=2.27.2,<2.40.0",
    "colorama~=0.4.6",
    "docker~=7.1.0",
    "pytest~=8.3.5",
    "pytest-asyncio~=0.25.3",
    "mcp~=1.5.0",
    "httpx>=0.27.0",
    "tomli>=2.0.0",
    "boto3~=1.37.18",
    "setuptools~=75.8.0",
    "django-environ~=0.11.0",
    "django-cors-headers~=4.3.0",
    "django-filter>=25.1",
    "django-autoslug~=1.9.9",
    "django-compression-middleware~=0.5.0",
    "django-redis>=6.0.0",
    "argon2-cffi~=23.1.0",
    "redis~=5.0.0",
    "celery~=5.3.0",
    "pyjwt~=2.8.0",
    "gunicorn>=23.0.0",
    "whitenoise>=6.10.0",
    "curl-cffi>=0.13.0",
    "apify-client>=2.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]
